re: #3. e2e test fixes for tip-manager and block-section. TODO isVisible test in tip-manager.

--- a/src/components/calcite-block-content/calcite-block-content.scss
+++ b/src/components/calcite-block-content/calcite-block-content.scss
@@ -2,4 +2,5 @@
   display: block;
   background-color: var(--calcite-app-background);
   padding: 0 var(--calcite-app-side-spacing-half) var(--calcite-app-cap-spacing-half);
+  animation: calcite-app-fade-in var(--calcite-app-animation-time) var(--calcite-app-easing-function);
 }
